--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    
+    <title>Angela DeBerry To Do</title>
 </head>
 <body>
 <main>
@@ -24,3 +27,4 @@
   </svg>
   <script src="todo.js"></script>
   </body>
+  </html>
