--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <main>
     <div class="container">
-      <h1 class="app-title">todos</h1>
+      <h1 class="app-title">TODOS</h1>
       <ul class="todo-list js-todo-list"></ul>
      <div class="empty-state">
        <svg class="checklist-icon"><use href="#checklist-icon"></use></svg>
